# Professional-Instrument-Control-System

./: .gitignore  CHANGELOG.md  LICENSE  README.md  instrument_automation_system_enhanced.py  oscilloscope_automation_main.py  pyproject.toml  requirements.txt  setup.py
instrument_control/: keithley_power_supply.py  keysight_oscilloscope.py
standalone scripts/: standalone_dmm.py  standalone_oscilloscope.py  standalone_power_supply.py
